--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "token-auth",
+  "name": "nodejs-token-auth",
   "version": "1.0.1",
   "description": "Token authentication system",
   "main": "index.js",
@@ -10,5 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "uuid": "^8.3.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sandeep2007/nodejs-token-auth.git"
+  },
+  "keywords": [
+    "nodejs-toke-auth",
+    "Rest",
+    "API"
+  ],
+  "bugs": {
+    "url": "https://github.com/sandeep2007/nodejs-token-auth/issues"
+  },
+  "homepage": "https://github.com/sandeep2007/nodejs-token-auth#readme"
 }
